--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
 dependencies:
   override:
     - pip install -U -r requirements.txt
-    - pip install -U flake8 awscli
+    - pip install -U awscli
 compile:
   override:
     - make templates
