--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,7 +4,7 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-    - '[0-9]+.[0-9]+*' # Push events to matching v*, i.e. 1.0, 20.15.10
+    - 'v[0-9]+.[0-9]+*' # Push events to matching v*, i.e. 1.0, 20.15.10
 
 jobs:
   # Split release/upload workflow adapted from:
@@ -45,8 +45,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install awscli
           # FIXME: Clean up how version is set
-          echo ${{ github.ref }} > version.txt
+          pwd
+          # strip leading 'v'
+          echo "${{ github.ref }}" | cut -c2- > version.txt
+          cat version.txt
           make
           make upload
       - name: Zip stacks
