--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,9 +44,7 @@ jobs:
           pip install -r requirements.txt
           pip install awscli
       - name: Build templates
-        run: |
-          echo ${{ steps.vars.outputs.version }} > version.txt
-          make
+        run: make VERSION=${{ steps.vars.outputs.version }} versioned_templates
       - name: Upload to S3
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
