--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,8 +9,8 @@ repos:
     - id: check-yaml
     - id: check-added-large-files
     - id: check-json
-- repo: https://github.com/timothycrosley/isort
-  rev: 5.7.0
+- repo: https://github.com/pycqa/isort
+  rev: 5.11.5
   hooks:
     - id: isort
 - repo: https://github.com/PyCQA/flake8
