--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,11 +9,11 @@ repos:
     - id: check-yaml
     - id: check-added-large-files
     - id: check-json
-- repo: https://github.com/timothycrosley/isort
-  rev: 5.7.0
+- repo: https://github.com/pycqa/isort
+  rev: 5.11.5
   hooks:
     - id: isort
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 3.8.4
+- repo: https://github.com/PyCQA/flake8
+  rev: 6.0.0
   hooks:
     - id: flake8
